--- a/create.html
+++ b/create.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Create Post</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class='fx fxrow talignC margin0'>
     <h1>Create a new post</h1>
-    <form action="process-post.php" method="POST">
-        <label for="title">Title : </label>
-        <input id="title" name="title" type="text">
-        </br>
-        <label for="content">Content : </label>
-        <textarea id="content" name="content" id="" cols="30" rows="10" placeholder="Enter Texte"></textarea>
-        <input type="submit" value="send">
-    </form>
+    <article>
+        <form action="process-post.php" method="POST">
+            <label for="title">Title : </label>
+            <input id="title" name="title" type="text">
+            </br>
+            <label for="content">Content : </label>
+            <textarea id="content" name="content" cols="30" rows="5" placeholder="Enter Texte"></textarea>
+            <input type="submit" value="send">
+        </form>
+    </article>
 </body>
 </html>
